@@ -1,0 +1,71 @@
+/*
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package org.apache.giraph.comm.messages.queue;
+
+import org.apache.giraph.utils.VertexIdMessages;
+import org.apache.hadoop.io.Writable;
+import org.apache.hadoop.io.WritableComparable;
+
+/**
+ * Small wrapper that holds a reference to vertex message
+ * and knows partition id.
+ * @param <I> vertexId type parameter
+ * @param <M> message type parameter
+ */
+public class PartitionMessage<I extends WritableComparable,
+    M extends Writable> {
+  /** partition id */
+  private int partitionId;
+  /** vertext message */
+  private VertexIdMessages<I, M> message;
+
+  /**
+   * Constructs wrapper from partitino id and vertext message
+   * object.
+   * @param partitionId destination partition id
+   * @param message message object
+   */
+  public PartitionMessage(int partitionId, VertexIdMessages<I, M> message) {
+    this.partitionId = partitionId;
+    this.message = message;
+  }
+
+  /**
+   * Partition id
+   * @return destination partition id.
+   */
+  public int getPartitionId() {
+    return partitionId;
+  }
+
+  /**
+   * Message
+   * @return vertex message
+   */
+  public VertexIdMessages<I, M> getMessage() {
+    return message;
+  }
+
+  @Override
+  public String toString() {
+    return "PartitionMessage{" +
+        "partitionId=" + partitionId +
+        ", message=" + message +
+        '}';
+  }
+}
